--- a/best_practice_manuals/file-paths.Rmd
+++ b/best_practice_manuals/file-paths.Rmd
@@ -1,7 +1,12 @@
 ---
 title: "LTER Working Group File Path Best Practices"
 author: "NCEAS Scientific Computing Support Team"
-output: pdf_document
+knit: (function(input_file, encoding) {
+  out_dir <- '../docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'file-paths.html'))})
+output: html_document
 ---
 
 ```{r setup, include = FALSE}
@@ -10,14 +15,17 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # NCEAS SciComp Team Best Practice Tips: **File Paths**
 
-Welcome! We at the Scientific Computing Support Team have assembled this document to discuss our recommendations for handling **file paths**. When sharing code collaboratively (e.g., with GitHub) managing the difference between your folder structure and those of your colleagues can be tackled in a variety of ways. Failing to account for this can result in annoying errors where content are either not read in successfully or exported to the wrong folder. Below are our recommendations for file path management in a team context, we hope they help!
+Welcome! We at the Scientific Computing Support Team have assembled this document to discuss our recommendations for handling **file paths** on NCEAS analytical server. When sharing code collaboratively (e.g., with GitHub) managing the difference between your folder structure and those of your colleagues can be tackled in a variety of ways. Failing to account for this can result in annoying errors where content are either not read in successfully or exported to the wrong folder. For content inside your working directory, we recommend to use relative paths. However sometimes you need to read files from folders that are outside your working directory, for example large datasets shared among your team members.
+
+Below are our recommendations for file path management in a team context, we hope they help!
 
 ## 1) Preserve File Paths as Objects
 
-First and foremost, we recommend that you begin each script by saving the paths to your files as objects. This makes it easy for each new user to remember that they need to alter those objects so that data are read in and saved out to the appropriate places.
+First and foremost, we recommend that you begin each script (just after loading your libraries) by saving all the paths to your files as objects. This makes it easy for each new user to remember that they might need to alter those objects so that data are read in and saved out to the appropriate places.
 
 ```{r path_objects}
-(my_path <- "path/to/my/file/")
+my_path <- "path/to/my/file/"
+my_path
 ```
 
 ## 2) Use `file.path()` to Make Path Objects
@@ -25,7 +33,8 @@ First and foremost, we recommend that you begin each script by saving the paths 
 `file.path()` is a useful base R function that automatically accounts for the fact that Mac and PC operating systems use different slashes between folder names to indicate a path (one uses '/' and the other uses '\\')
 
 ```{r file.path_demo}
-(my_path <- file.path("path", "to", "my", "file"))
+my_path <- file.path("path", "to", "my", "file")
+my_path
 ```
 
 Note that while you could use `paste(..., sep = '/')` instead, it does not account for the different slash between Mac and PC so `file.path() is preferable.
