--- a/best_practice_manuals/file-paths.Rmd
+++ b/best_practice_manuals/file-paths.Rmd
@@ -15,9 +15,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # NCEAS SciComp Team Best Practice Tips: **File Paths**
 
-Welcome! We at the Scientific Computing Support Team have assembled this document to discuss our recommendations for handling **file paths** on NCEAS analytical server. When sharing code collaboratively (e.g., with GitHub) managing the difference between your folder structure and those of your colleagues can be tackled in a variety of ways. Failing to account for this can result in annoying errors where content are either not read in successfully or exported to the wrong folder. For content inside your working directory, we recommend to use relative paths. However sometimes you need to read files from folders that are outside your working directory, for example large datasets shared among your team members.
+Welcome! We at the Scientific Computing Support Team have assembled this document to discuss our recommendations for handling **file paths** on NCEAS analytical server. When sharing code collaboratively (e.g., with GitHub) managing the difference between your folder structure and those of your colleagues can be tackled in a variety of ways. Failing to account for this can result in annoying errors where content is either not read in successfully or is exported to the wrong folder. For content inside your working directory, we recommend using relative paths. However sometimes you need to read files from folders that are outside your working directory, for example large datasets shared among your team members.
 
-Below are our recommendations for file path management in a team context, we hope they help!
+Below are our recommendations for file path management in a team context; we hope they help!
 
 ## 1) Preserve File Paths as Objects
 
@@ -37,7 +37,7 @@ my_path <- file.path("path", "to", "my", "file")
 my_path
 ```
 
-Note that while you could use `paste(..., sep = '/')` instead, it does not account for the different slash between Mac and PC so `file.path() is preferable.
+Note that while you could use `paste(..., sep = '/')` instead, it does not account for the different slash between Mac and PC so `file.path()` is preferable.
 
 ## 3) Use Path Objects when Reading/Writing Data
 
@@ -48,7 +48,7 @@ Now that you've saved your paths as objects using `file.path()` to account for o
 my_raw_data <- read.csv(file = file.path(my_path, "raw_data.csv"))
 
 # Export
-write.csv(x = data_obj, file = file.path(my_path, "tidy_data.csv"))
+write.csv(x = data_object, file = file.path(my_path, "tidy_data.csv"))
 ```
 
 ## Summary
