--- a/best_practice_manuals/file-paths.Rmd
+++ b/best_practice_manuals/file-paths.Rmd
@@ -13,7 +13,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# NCEAS SciComp Team Best Practice Tips: **File Paths**
+# File Paths
 
 Welcome! We at the Scientific Computing Support Team have assembled this document to discuss our recommendations for handling **file paths** on NCEAS analytical server. When sharing code collaboratively (e.g., with GitHub) managing the difference between your folder structure and those of your colleagues can be tackled in a variety of ways. Failing to account for this can result in annoying errors where content is either not read in successfully or is exported to the wrong folder. For content inside your working directory, we recommend using relative paths. However sometimes you need to read files from folders that are outside your working directory, for example large datasets shared among your team members.
 
