--- a/best_practice_manuals/file-paths.Rmd
+++ b/best_practice_manuals/file-paths.Rmd
@@ -1,11 +1,6 @@
 ---
-title: "LTER Working Group File Path Best Practices"
+title: "Computing Best Practices"
 author: "NCEAS Scientific Computing Support Team"
-knit: (function(input_file, encoding) {
-  out_dir <- '../docs';
-  rmarkdown::render(input_file,
- encoding=encoding,
- output_file=file.path(dirname(input_file), out_dir, 'file-paths.html'))})
 output: html_document
 ---
 
