Modified Julien's blurb to use his website content

--- a/staff.qmd
+++ b/staff.qmd
@@ -10,11 +10,9 @@ Because we live in an era where we may only meet in person sporadically, we felt
 
 <img src="images/jbrun.jpeg" align="right" width="25%"/>
 
-As a senior data scientist, Julien helps our synthesis working groups to transform their data and computing challenges into solvable tasks. While promoting reproducible science-based practices, Julien advises and trains our experts on how to best combine and analyze heterogeneous data sets, as well as scaling their analysis. He is also an instructor in our data science training efforts.
+As a senior data scientist, the core of Julien's work is to understand the data and computing challenges researchers are facing and help them to translate these challenges into solvable tasks. Julien advises and mentors on how to clean, structure, combine, and analyze their heterogeneous data sets, as well as scaling up their analysis while promoting open and reproducible data science principles.
 
-Julien's scientific expertise is in ecohydrology, Earth observation techniques (remote sensing and GIS), and process-based models.
-
-Prior to obtaining his Ph.D. in Civil and Environmental Engineering at Duke University, Julien conducted several projects on land cover change, vegetation monitoring, and disaster mapping for governmental and international institutions.
+Julien is also a Lecturer in the [Master in Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) program at Bren School of Environmental Science and Management at UC Santa Barbara, where he teaches “good enough” practices in reproducible and collaborative data science.
 
 ## Angel Chen
 
