Added an 'at' sign in front of Julien's Twitter handle

--- a/staff.qmd
+++ b/staff.qmd
@@ -6,7 +6,7 @@ Because we live in an era where we may only meet in person sporadically, we felt
 
 ## Julien Brun
 
-[brunj7.github.io](https://brunj7.github.io/) -- <img src="images/github_logo.png" width="2%"/> [brunj7](https://github.com/brunj7) -- <img src="images/twitter_logo.png" width="2%"/> [brunj7](https://twitter.com/brunj7)
+[brunj7.github.io](https://brunj7.github.io/) -- <img src="images/github_logo.png" width="2%"/> [brunj7](https://github.com/brunj7) -- <img src="images/twitter_logo.png" width="2%"/> [\@brunj7](https://twitter.com/brunj7)
 
 <img src="images/jbrun.jpeg" align="right" width="25%"/>
 
