Changed logos to be transparent and added a logo to the 'best practices' page

--- a/best_practices.qmd
+++ b/best_practices.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Best Practice Manuals"
 ---
+<img src = "images/nceas_logo_square.png" align = "right" width = "25%" />
 
 ### Welcome!
 
