--- a/index.qmd
+++ b/index.qmd
@@ -1,18 +1,11 @@
 ---
 title: "Scientific Computing Support at NCEAS"
 ---
-<img src = "images/nceas-logo-wide.png" align = "right" width = "50%" />
 
-## What We Do
+<img src = "images/nceas_logo_wide.png" align = "right" width = "50%" />
+
+### What We Do
 
 We are a small (but mighty!) team of data scientists working at the National Center for Ecological Analysis and Synthesis ([NCEAS](https://www.nceas.ucsb.edu/)). We primarily work with LTER (Long Term Ecological Research) Working Groups and provide all manner of data-adjacent assistance. This can include offering workshops on new skills or programs, helping you get set up on NCEAS' server, acquiring data from third parties, or writing code to wrangle, analyze, or visualize the data your group has already collected. Depending on your team's preferences, we can operate on a spectrum of independence ranging from complete self-sufficiency after initial definition of task scope to coding together with your team.
 
 Please feel free to take a look at our NCEAS information page [here](https://www.nceas.ucsb.edu/programming-support) as well.
-
-### Past Workshops
-
-We have offered workshops in the past including the following:
-
-- [Collaborative Coding with GitHub in RStudio](https://pages.github.nceas.ucsb.edu/LTER/github-workshop/)
-    - [A pared-down version of this workshop](https://pages.github.nceas.ucsb.edu/njlyon/asm-2022_github-workshop/) was offered at the [2022 All Scientists' Meeting](https://lternet.edu/2022-all-scientists-meeting/)
-
