--- a/staff.qmd
+++ b/staff.qmd
@@ -6,7 +6,7 @@ Because we live in an era where we may only meet in person sporadically, we felt
 
 ## Julien Brun
 
-[brunj7.github.io](https://brunj7.github.io/) -- <img src="images/github_logo.png" width="2%"/> [brunj7](https://github.com/brunj7) -- <img src="images/twitter_logo.png" width="2%"/> [\@brunj7](https://twitter.com/brunj7)
+[brunj7.github.io](https://brunj7.github.io/) -- <img src="images/github_logo_gray.png" width="2%"/> [brunj7](https://github.com/brunj7) -- <img src="images/twitter_logo_gray.png" width="2%"/> [\@brunj7](https://twitter.com/brunj7)
 
 <img src="images/jbrun.jpeg" align="right" width="25%"/>
 
@@ -16,7 +16,7 @@ Julien is also a Lecturer in the [Master in Environmental Data Science](https://
 
 ## Angel Chen
 
-<img src="images/github_logo.png" width="2%"/> [angelchen7](https://github.com/angelchen7)
+<img src="images/github_logo_gray.png" width="2%"/> [angelchen7](https://github.com/angelchen7)
 
 <img src="images/achen.jpeg" align="right" width="25%"/>
 
@@ -24,7 +24,7 @@ Angel supports LTER synthesis working groups by developing data pipelines and re
 
 ## Nick Lyon
 
-[njlyon0.github.io](https://njlyon0.github.io/) -- <img src="images/github_logo.png" width="2%"/> [njlyon0](https://github.com/njlyon0) -- <img src="images/twitter_logo.png" width="2%"/> [\@scilyon](https://twitter.com/scilyon)
+[njlyon0.github.io](https://njlyon0.github.io/) -- <img src="images/github_logo_gray.png" width="2%"/> [njlyon0](https://github.com/njlyon0) -- <img src="images/twitter_logo_gray.png" width="2%"/> [\@scilyon](https://twitter.com/scilyon)
 
 <img src="images/nlyon.png" align="right" width="25%"/>
 
