--- a/best_practices.qmd
+++ b/best_practices.qmd
@@ -1,6 +1,11 @@
 ---
 title: "Best Practice Manuals"
 ---
+```{r libraries, include = FALSE, message = FALSE, echo = FALSE}
+library(librarian)
+librarian::shelf(tidyverse)
+```
+
 <img src = "images/nceas_logo_square.png" align = "right" width = "25%" />
 
 ### Welcome!
@@ -50,3 +55,30 @@ write.csv(x = data_object, file = file.path(my_path, "tidy_data.csv"))
 #### File Path Summary
 
 We strongly recommend preserving your file paths as objects at the start of your scripts (using `file.path()`) to ensure that your scripts can be shared as easily as possible among your team without issues due to user-specific folder names or computer operating system interrupting the work that you set out to do.
+
+## Best Practices: Package Loading
+
+Loading packages / libraries in R can be cumbersome when working collaboratively because there is no guarantee that you all have the same packages installed. While you could comment-out an `install.packages()` line for every package you need for a given script, we recommend using the R package `librarian` to greatly simplify this process!
+
+`librarian::shelf()` accepts the names of all of the packages--either CRAN or GitHub--installs those that are missing in that particular R session and then attaches all of them. See below for an example:
+
+To load packages typically you'd have something like the following in your script:
+
+```{r library_og_method, eval = FALSE}
+## Install packages (if needed)
+# install.packages("tidyverse")
+# install.packages("devtools")
+# devtools::install_github("NCEAS/scicomptools")
+
+# Load libraries
+library(tidyverse); library(scicomptools)
+```
+
+With `librarian::shelf()` however this becomes *much* cleaner!
+
+```{r shelf_demo, eval = FALSE}
+# Install and load packages!
+librarian::shelf(tidyverse, NCEAS/scicomptools)
+```
+
+When using `librarian::shelf()`, package names do not need to be quoted and GitHub packages can be installed without the additional steps of installing the `devtools` package and using `devtools::install_github()` instead of `install.packages()`.
