--- a/website_content/best_practices.qmd
+++ b/website_content/best_practices.qmd
@@ -3,7 +3,7 @@ title: "Best Practice Manuals"
 ---
 ```{r libraries, include = FALSE, message = FALSE, echo = FALSE}
 library(librarian)
-librarian::shelf(tidyverse)
+librarian::shelf(tidyverse, cran_repo = 'https://cran.r-project.org')
 ```
 
 <img src = "images/nceas_logo_square.png" align = "right" width = "25%" />
