--- a/staff.qmd
+++ b/staff.qmd
@@ -2,11 +2,11 @@
 title: "Our Team"
 ---
 
-Because we live in an era where we may only meet in person sporadically, we felt it would be nice to introduce ourselves here to help you put a face to the emails / Slack messages / GitHub issues we exchange going forward!
+Because we live in an era where we may only meet in person sporadically, we felt it would be nice to introduce ourselves here to help you put a face to the emails / Slack messages / GitHub issues we exchange going forward! If you would like to email the whole team as one send your questions to **scicomp@nceas.ucsb.edu**
 
 ## Julien Brun
 
-[brunj7.github.io](https://brunj7.github.io/) -- <img src="images/github_logo_gray.png" width="2%"/> [brunj7](https://github.com/brunj7) -- <img src="images/twitter_logo_gray.png" width="2%"/> [\@brunj7](https://twitter.com/brunj7)
+[brunj7.github.io](https://brunj7.github.io/) -- <img src="images/github_logo_gray.png" width="2%"/> [brunj7](https://github.com/brunj7) -- <img src="images/twitter_logo_gray.png" width="2%"/> [\@brunj7](https://twitter.com/brunj7) -- **brun@nceas.ucsb.edu**
 
 <img src="images/jbrun.jpeg" align="right" width="25%"/>
 
@@ -16,7 +16,7 @@ Julien is also a Lecturer in the [Master in Environmental Data Science](https://
 
 ## Angel Chen
 
-<img src="images/github_logo_gray.png" width="2%"/> [angelchen7](https://github.com/angelchen7)
+<img src="images/github_logo_gray.png" width="2%"/> [angelchen7](https://github.com/angelchen7) -- **anchen@nceas.ucsb.edu**
 
 <img src="images/achen.jpeg" align="right" width="25%"/>
 
@@ -24,7 +24,7 @@ Angel supports LTER synthesis working groups by developing data pipelines and re
 
 ## Nick Lyon
 
-[njlyon0.github.io](https://njlyon0.github.io/) -- <img src="images/github_logo_gray.png" width="2%"/> [njlyon0](https://github.com/njlyon0) -- <img src="images/twitter_logo_gray.png" width="2%"/> [\@scilyon](https://twitter.com/scilyon)
+[njlyon0.github.io](https://njlyon0.github.io/) -- <img src="images/github_logo_gray.png" width="2%"/> [njlyon0](https://github.com/njlyon0) -- <img src="images/twitter_logo_gray.png" width="2%"/> [\@scilyon](https://twitter.com/scilyon) -- **lyon@nceas.ucsb.edu**
 
 <img src="images/nlyon.png" align="right" width="25%"/>
 
