Added more explanation for why `librarian::shelf` is so great

--- a/best_practices.qmd
+++ b/best_practices.qmd
@@ -138,7 +138,9 @@ To load packages typically you'd have something like the following in your scrip
 library(tidyverse); library(scicomptools)
 ```
 
-With `librarian::shelf()` however this becomes *much* cleaner!
+With `librarian::shelf()` however this becomes *much* cleaner! In addition to being fewer lines, using `librarian` also removes the possibility that someone running your code misses one of the packages that your script depends on and then the script breaks for them later on. `librarian::shelf()` automatically detects whether a package is installed, installs it if necessary, and then attaches the package.
+
+In essence, `librarian::shelf()` wraps `install.packages()`, `devtools::install_github()`, and `library()` into a single, human-readable function.
 
 ```{r shelf_demo, eval = FALSE}
 # Install and load packages!
